# DE-homeworks

./: README.md
hw1-faulty-api/: pyproject.toml  results.csv
hw1-faulty-api/src/orders_client/: client_threads.py
hw2-revenue-analysis/: .gitignore  generate_data_json.py  pyproject.toml  revenue_analysis.ipynb
hw3-find-culprit/: docker-compose.yml  servers.json
hw3-find-culprit/data/: people.csv  purchases.csv  swipes.csv
hw3-find-culprit/init/: init.sql
minilabs-databases/: pyproject.toml
minilabs-databases/01-coffee-shop/: coffee.ipynb  docker-compose.yml
minilabs-databases/02-star-wars/: star-wars.ipynb
minilabs-databases/03-clickhouse-magic/: docker-compose.yml  justfile
minilabs-databases/03-clickhouse-magic/config/: profiles.yml
minilabs-databases/03-clickhouse-magic/config/models/marts/: fct_orders.sql
minilabs-databases/03-clickhouse-magic/config/models/staging/: stg_customers.sql
minilabs-databases/03-clickhouse-magic/config/seeds/: orders.csv
minilabs-databases/03-clickhouse-magic/magic_shop/: dbt_project.yml
minilabs-databases/03-clickhouse-magic/magic_shop/models/: schema.yml
minilabs-databases/03-clickhouse-magic/magic_shop/seeds/: orders.csv  payments.csv
