[project]
name = "orders-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=4.0.0",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]

[project.scripts]
orders_server = "orders_server.cli:main"
orders_client_sync = "orders_client.client_threads:main"
orders_client_async = "orders_client.client_async:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
